# IOC-Analyzer

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ioc_collector/: config.py
ioc_collector/api/: api.py
ioc_collector/database/: crud.py  database.py
ioc_collector/envs/: .env.template
ioc_collector/models/: models.py
ioc_collector/modules/IPAdresses/: getIPadresses.py
ioc_collector/modules/alienvault/: alienvault.py
ioc_collector/modules/blacklist/: __init__.py  blacklist.py
ioc_collector/modules/geometricLocation/: getgeolocation.py
ioc_collector/modules/googlesafe/: googlesafe.py
ioc_collector/modules/greynoise/: greynoise.py
ioc_collector/modules/virustotal/: virustotal.py
ioc_collector/modules/whoisInfo/: whoisInfo.py
ioc_collector/schemas/: schemas.py
ioc_collector/utils/: utils.py
